Projet_GL/src/test/deca/context/valid/unprovided/null.deca
// Description:
//    Mise en jeu de null
//
// Resultats:
//    Aucune erreur attendue
//
// Historique:
//    cree le 24/01/2018

{
	int a;
	if (a == null){
	   println("");
	}
}